force-app/main/default/objects/Q9__SyncLog__c/Q9__SyncLog__c.object-meta.xml
<CustomObject>
    <label>Sync Log</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Sync Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>