force-app/main/default/objects/Q9__SyncLog__c/fields/Q9__Date__c.field-meta.xml
<CustomField>
    <fullName>Q9__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>