force-app/main/default/objects/Q9__SyncLog__c/fields/Q9__Type__c.field-meta.xml
<CustomField>
    <fullName>Q9__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>